--- a/css/style.css
+++ b/css/style.css
@@ -255,15 +255,17 @@ header .header-links a:hover {
 /* ------------- */
 
 /* start index page */
-.index-block .title {
-	text-align: center;
+.index-sec {
+	padding-bottom: 100px;
 }
-.index-block .title h1 {
+
+.title h1 {
 	font-weight: 500;
 	font-size: 46px;
 	line-height: 54px;
 	margin-bottom: 50px;
 	color: #0D1E25;
+	text-align: center;
 }
 .index-block .title p {
 	font-size: 22px;
@@ -280,23 +282,27 @@ header .header-links a:hover {
 	align-items: center;
 	justify-content: center;
 }
-.index-content {
+.index-slider {
 	padding-top: 50px;
+	padding-bottom: 50px;
 }
 .index-content .swiper-slide img {
 	width: 100%;
-	height: 400px;
-	opacity: 0.6;
-}
-
-.index-slider .swiper-slide-active img {
-	opacity: 1;
+	height: 420px;
 }
 .index-slider .swiper-slide-active {
-	transform: scale(1.6) !important;
+	transform: scale(1.6, 1) !important;
 }
-
-
+.index-content .index-catalog-btn {
+	text-align: center;
+	margin-top: 30px;
+}
+/* ------------ */
+.index-tab {
+	padding: 300px 0 60px;
+	margin-top: 110px;
+	background: #EBF3FF;
+}
 
 
 
